--- a/static/public.css
+++ b/static/public.css
@@ -1,29 +1,43 @@
-html,body,#app{width:100%;height:100%;font-size:625%;}
-#app{font-size: .16rem}
-*{
-  margin:0px;
-  padding:0px;
-  box-sizing: border-box;
-}
-.clear{
-	clear: both;
-}
-.center{
-    text-align: center;
-}
-.bg-dark{
-    background-color: rgb(40, 46, 85);
-}
-.fontSize-20{
-    font-size: .2rem;
-}
-.fontSize-14{
-    font-size: .14rem;
-}
-.fontColor-w{
-    color: white;
+html, body, #app {
+  width: 100%;
+  height: 100%;
+  font-size: 625%;
 }
 
-.el-loading-spinner .el-loading-text{
-    font-size: .16rem !important;
+#app {
+  font-size: .16rem
+}
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+.clear {
+  clear: both;
+}
+
+.center {
+  text-align: center;
+}
+
+.bg-dark {
+  background-color: rgb(40, 46, 85);
+}
+
+.fontSize-20 {
+  font-size: .2rem;
+}
+
+.fontSize-14 {
+  font-size: .14rem;
+}
+
+.fontColor-w {
+  color: white;
+}
+
+.el-loading-spinner .el-loading-text {
+  font-size: .16rem !important;
 }
