修正消息提示弹窗字体大小 更换更漂亮的导航栏

--- a/static/public.css
+++ b/static/public.css
@@ -41,3 +41,6 @@ html, body, #app {
 .el-loading-spinner .el-loading-text {
   font-size: .16rem !important;
 }
+.el-message{
+  font-size: .16rem
+}
