--- a/static/font/zpix.css
+++ b/static/font/zpix.css
@@ -5,7 +5,7 @@
 }
 
 * {
-  font-family: "pix font";
+  /*font-family: "pix font";*/
   /*font-size: 0.15rem;*/
   /*font-weight: bold;*/
   /*text-shadow: 2px 2px 1px gray;*/
