--- a/static/public.css
+++ b/static/public.css
@@ -67,3 +67,9 @@ html, body, #app {
   text-align: right;
 }
 
+.el-table--striped .el-table__body tr.el-table__row--striped.current-row td, .el-table__body tr.current-row>td {
+  color: #fff;
+  background-color: #2775b6!important;
+}
+
+
